# DocumentAgent

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_reranker_api.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  answer_agent.py  graph.py  prompts.py  retrieval_agent.py  schemas.py  verification_agent.py
backend/scripts/: eval_alice.py  query_docs.py  run_rag_evaluation.py  sample_alice.py  seed_evaluation_corpus.py
backend/tests/: conftest.py  test_agent_log_service.py  test_agent_runs_api.py  test_answer_agent.py  test_answer_evidence_service.py  test_answer_log_service.py  test_answer_prompt_service.py  test_api_chat.py  test_api_documents.py  test_api_messages.py  test_api_observability.py  test_chat_api.py  test_chunker.py  test_chunking_service.py  test_citation_validation.py  test_config.py  test_contracts.py  test_deletion_logs_api.py  test_document_api.py  test_document_delete_migration.py  test_document_deletion.py  test_document_indexing_api.py  test_document_parser.py  test_document_processing.py  test_document_upload.py  test_embedding_service.py  test_entity_extraction_service.py  test_evaluation_metrics.py  test_evidence_payload_optimizer.py  test_graph_builder.py  test_graph_retrieval_service.py  test_graph_schemas.py  test_grounding.py  test_hashing.py  test_heading_detection.py  test_health.py  test_hybrid_retrieval_service.py  test_ingestion_graph.py  test_ingestion_inputs.py  test_ingestion_payloads.py  (+28 more)
(+284 files in other folders)
