[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragdocument-backend"
version = "0.1.0"
description = "FastAPI backend for the RagDocument MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "httpx>=0.27,<1.0",
  "supabase>=2.6,<3.0",
  "qdrant-client>=1.10,<2.0",
  "langgraph>=0.2,<1.0",
  "openai>=1.40,<2.0",
  "pymupdf>=1.24,<2.0",
  "python-docx>=1.1,<2.0",
  "beautifulsoup4>=4.12,<5.0",
  "tiktoken>=0.7,<1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "respx>=0.21,<1.0",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:The default value of `allowed_objects` will change in a future version.*:langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
